syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupedu.armando";
option java_outer_classname = "PixKeyManager";
option objc_class_prefix = "HLW";

package br.com.zupedu.armando;

service PixKeyManagerService {
  rpc registrar (PixKeyManagerRequest) returns (PixKeyManagerResponse) {}
}

enum TipoChave {
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  RANDOMICA = 4;
}

enum TipoConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CORRENTE = 1;
  POUPANCA = 2;
}

message PixKeyManagerRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message PixKeyManagerResponse {
  string pixId = 1;
}